# nine

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  book.toml  justfile  rust-toolchain
.github/workflows/: dependency-review.yml  static.yml
crates/n9-core/: Cargo.toml
crates/n9-core/src/: main.rs  server.rs
discovery/config-toml/: Cargo.toml
discovery/config-toml/src/: lib.rs  particle.rs  state.rs
discovery/model-openai/src/: particle.rs
discovery/n9-node/: Cargo.toml
discovery/n9-node/src/: keypair.rs  lib.rs  node.rs
discovery/n9-node/src/atom/: aqn.rs  encoding.rs  id.rs  mod.rs  state.rs
discovery/n9-node/src/connector/: behaviour.rs  mod.rs  protocol.rs  swarm_std.rs
discovery/n9-node/src/ids/: mod.rs
discovery/n9-node/src/publisher/: dispatcher.rs  mod.rs  recorder.rs  server.rs
discovery/n9-node/src/subscriber/: client.rs  listener.rs  mod.rs  player.rs
examples/chaos-chain/: Cargo.toml
examples/chaos-chain/src/: main.rs
examples/trading-agent/: Cargo.toml
examples/trading-agent/src/: main.rs
examples/trading-assistant/: Cargo.toml
examples/trading-assistant/src/: main.rs
particles/app-gui/: Cargo.toml
particles/app-gui/src/: main.rs
particles/app-stdio/: Cargo.toml
particles/app-tui/: Cargo.toml
particles/app-tui/src/: state.rs
particles/app-tui/src/layouts/: auto.rs  mod.rs
particles/app-tui/src/widgets/: event_log.rs  failure.rs  liner.rs  mod.rs
particles/app-web/: Cargo.toml
particles/app-web/ui/: Cargo.toml  index.html  justfile
particles/app-web/ui/src/: frontend.rs  lib.rs  main.rs  net.rs  web_app.rs  web_app_flow.rs
particles/app-web/ui/styles/: app.scss  styles.scss
particles/chat-telegram/: Cargo.toml
particles/chat-telegram/src/: particle.rs
particles/config-toml/: Cargo.toml
particles/config-toml/src/: config_loader.rs  lib.rs  particle.rs
particles/control-chat/: Cargo.toml
particles/control-chat/src/: particle.rs
particles/control-session/: Cargo.toml
particles/control-session/src/: chat_loop.rs  flow.rs  lib.rs  particle.rs  trace_agent.rs
particles/control-session/src/flow/: chat_control.rs  mod.rs  session_control.rs
particles/control-task/: Cargo.toml
particles/control-task/src/: flow.rs  lib.rs  particle.rs  task.rs  tools.rs
particles/exchange/: Cargo.toml
particles/exchange-dydx/: Cargo.toml
particles/exchange-dydx/src/: config.rs  particle.rs
particles/exchange-nominal/: Cargo.toml
particles/exchange-nominal/src/: lib.rs  nominals.rs  particle.rs
particles/exchange/src/: lib.rs  nominals.rs  particle.rs  tools.rs
particles/model-anthropic/: Cargo.toml
particles/model-anthropic/src/: convert.rs
particles/model-openai/: Cargo.toml
particles/model-openai/src/: convert.rs  particle.rs
particles/model-rig/: Cargo.toml
particles/runtime-wasm/: Cargo.toml
particles/runtime-wasm/src/: lib.rs  wasm_vm.rs
particles/system-info/: Cargo.toml
particles/system-info/src/: lib.rs  particle.rs  tools.rs
prototype/discovery/config-toml/src/: loader.rs  particle.rs
prototype/discovery/model-openai/: Cargo.toml
prototype/discovery/model-openai/src/: particle.rs
prototype/discovery/n9-node/src/: lib.rs  main.rs  node.rs  utils.rs
prototype/examples/: .env.sample
prototype/examples/trading-agent/src/: main.rs
prototype/examples/trading-assistant/: Cargo.toml
prototype/particles/app-gui/src/: app.rs  lib.rs
prototype/particles/app-stdio/src/: app.rs  console.rs  lib.rs
prototype/particles/app-tui/src/: app.rs  events.rs  lib.rs
prototype/particles/app-web/: build.rs
prototype/particles/chat-telegram/: Cargo.toml
prototype/particles/chat-telegram/src/: client.rs  config.rs
prototype/particles/config-toml/: Cargo.toml
prototype/particles/config-toml/src/: particle.rs
prototype/particles/control-chat/: Cargo.toml
prototype/particles/control-chat/src/: flow.rs  lib.rs  particle.rs
prototype/particles/control-session/: Cargo.toml
prototype/particles/control-session/src/: trace_agent.rs
prototype/particles/exchange/: Cargo.toml
prototype/particles/exchange-dydx/src/: lib.rs
prototype/particles/exchange/src/: lib.rs  particle.rs  tools.rs
prototype/particles/model-anthropic/src/: config.rs  lib.rs  (+1 more)
prototype/particles/model-openai/: Cargo.toml
prototype/particles/model-rig/: Cargo.toml
prototype/substance/n9/: Cargo.toml
prototype/substance/ui9/: Cargo.toml  README.md
prototype/substance/ui9-markdown/: Cargo.toml
prototype/substance/ui9-tui/: Cargo.toml
src/: SUMMARY.md  intro.md
substance/n9/: README.md
substance/n9-core/: Cargo.toml
substance/n9-core/src/: lib.rs
substance/n9-core/src/chain/: flow.rs  mod.rs  session.rs
substance/n9-core/src/essence/: mod.rs  particle.rs  substance.rs
substance/n9-core/src/router/: keeper.rs  mod.rs  model.rs  session.rs  tool.rs  types.rs
substance/n9-core/src/tracers/: tools.rs
substance/n9-core/src/unroller/: flow.rs  mod.rs  session.rs
substance/n9-kit/: Cargo.toml
substance/n9-kit/src/: lib.rs  liquid_tool.rs
substance/n9-std/src/: config_loader.rs
substance/n9-wasmer/: Cargo.toml
substance/ui9-app/: Cargo.toml
substance/ui9-codec/: Cargo.toml
substance/ui9-dui/: Cargo.toml
substance/ui9-dui/src/: lib.rs  reporter.rs
substance/ui9-dui/src/flow/: link.rs  mod.rs
substance/ui9-dui/src/tracers/: event.rs  failure.rs  job.rs  mod.rs  operation.rs  tree.rs
substance/ui9-maker/: Cargo.toml
substance/ui9-markdown/: Cargo.toml
substance/ui9-markdown/src/: lib.rs
substance/ui9-mesh/: Cargo.toml
substance/ui9-net/: Cargo.toml
substance/ui9-net/src/: lib.rs  types.rs
substance/ui9-net/src/relay/: connector.rs  keypair.rs  node.rs
substance/ui9-net/src/relay/connector/: behaviour.rs  mod.rs  swarm_std.rs  swarm_web.rs
substance/ui9-tracers/: Cargo.toml
web/frontend/: Cargo.toml  index.html
web/frontend/src/: frontend.rs  lib.rs  main.rs  net.rs  web_app.rs
web/frontend/src/render/: component.rs  mod.rs  widget.rs
web/frontend/src/widgets/: events.rs  events_list.rs  mod.rs  peers_list.rs
web/frontend/styles/: app.scss
(+136 files in other folders)
