[workspace]
resolver = "2"
members = [
    "examples/*",
    "particles/*",
    "substance/*",
    "web/*",
]
exclude = [
    # "examples",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/NethermindEth/nine"
rust-version = "1.84.1"
keywords = ["ai", "ai-agent", "framework"]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
bytes = "1.10.0"
chrono = "0.4.39"
console-subscriber = "0.4.1"
clap = { version = "4.5.29", features = ["derive"] }
crb = { version = "0.0.29" }
crb-system = { version = "0.0.29" }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"
eframe = "0.31.0"
egui = "0.31.0"
env_logger = "0.11.6"
envy = "0.4.2"
flexbuffers = "25.2.10"
futures = "0.3.31"
n9-core = { version = "0.0.1", path = "substance/n9-core" }
n9-app-tui = { version = "0.0.1", path = "particles/app-tui" }
n9-control-chat = { version = "0.0.1", path = "particles/control-chat" }
n9-control-task = { version = "0.0.1", path = "particles/control-task" }
n9-model-openai = { version = "0.0.1", path = "particles/model-openai" }
n9-system-info = { version = "0.0.1", path = "particles/system-info" }

n9-kit = { version = "0.0.1", path = "substance/n9-kit" }
n9-std = { version = "0.0.1", path = "substance/n9-std" }
libp2p = { version = "0.55.0", features = ["gossipsub", "macros", "mdns", "noise", "plaintext", "serde", "tcp", "tokio", "quic", "yamux"] }
libp2p-stream = "0.3.0-alpha"
futures-bounded = "0.2.4"
log = "0.4.25"
schemars = { version = "0.8.21", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
smallvec = "1.14.0"
thiserror = "2.0.11"
tokio = "1.43.0"
tokio-stream = "0.1.17"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typed-slab = "0.2.1"
ui9 = { version = "0.0.1", path = "substance/ui9" }
ui9-app = { version = "0.0.1", path = "substance/ui9-app" }
ui9-dui = { version = "0.0.1", path = "substance/ui9-dui" }
ui9-codec = { version = "0.0.1", path = "substance/ui9-codec", features = ["flex"] }
ui9-maker = { version = "0.0.1", path = "substance/ui9-maker" }
ui9-mesh = { version = "0.0.1", path = "substance/ui9-mesh" }
ui9-net = { version = "0.0.1", path = "substance/ui9-net" }
ui9-tracers = { version = "0.0.1", path = "substance/ui9-tracers" }
ui9-tui = { version = "0.0.1", path = "substance/ui9-tui" }
