[package]
name = "n9"
description = "Model Context Protocol for Ethereum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = ["server","transport-io","transport-sse-server"] }
serde = { version = "1.0.219", features = ["derive"] }
ethers = { version = "2.0.14", features = ["legacy"] }
chrono = "0.4"
tokio = { version = "1.49.0", features = ["full"] }
log.workspace = true
