[package]
name = "config-toml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
dirs.workspace = true
log.workspace = true
notify.workspace = true
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
