[package]
name = "chaos-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
crb.workspace = true
env_logger.workspace = true
n9-app-tui.workspace = true
n9-config-toml.workspace = true
n9-control-chat.workspace = true
n9-core.workspace = true
n9-model-openai.workspace = true
n9-system-info.workspace = true
tokio.workspace = true
ui9-mesh.workspace = true
