[package]
name = "trading-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
n9-node = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["signal"] }
