[package]
publish = false
name = "trading-assistant"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crb.workspace = true
crb-system.workspace = true
env_logger.workspace = true
n9-core.workspace = true
n9-app-stdio.path = "../../particles/app-stdio"
n9-app-tui.path = "../../particles/app-tui"
n9-model-anthropic.path = "../../particles/model-anthropic"
n9-control-chat.path = "../../particles/control-chat"
n9-exchange.path = "../../particles/exchange"
n9-exchange-dydx.path = "../../particles/exchange-dydx"
n9-chat-telegram.path = "../../particles/chat-telegram"
n9-model-openai.path = "../../particles/model-openai"
tokio.workspace = true
ui9-dui.workspace = true
ui9-mesh.workspace = true
