[package]
publish = false
name = "trading-assistant"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crb = { workspace = true, features = ["std"] }
env_logger.workspace = true
n9-app-stdio.path = "../../particles/app-stdio"
n9-app-tui.workspace = true
n9-chat-telegram.path = "../../particles/chat-telegram"
n9-config-toml.workspace = true
n9-control-chat.workspace = true
n9-control-task.workspace = true
n9-core.workspace = true
n9-exchange.path = "../../particles/exchange"
n9-exchange-dydx.path = "../../particles/exchange-dydx"
n9-model-anthropic.path = "../../particles/model-anthropic"
n9-model-openai.workspace = true
tokio.workspace = true
ui9-mesh = { workspace = true, features = ["std"] }
