[package]
name = "ice9-maker-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crb.workspace = true
eframe.workspace = true
egui.workspace = true
env_logger.workspace = true
tokio.workspace = true
ui9-dui.workspace = true
ui9-maker.workspace = true
ui9-mesh.workspace = true
ui9-net.workspace = true
