[package]
name = "n9-app-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
colored = "3.0.0"
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
futures.workspace = true
n9-core.workspace = true
n9-control-chat.workspace = true
rustyline = { version = "15.0.0", features = ["derive"] }
tokio.workspace = true
tokio-stream = { workspace = true, features = ["io-util"] }
ui9.workspace = true
ui9-dui.workspace = true
ui9-tui.workspace = true
termimad = "0.31.2"
crossterm = "0.28.1"
