[package]
name = "n9-app-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
crossterm = "0.29.0"
n9-core.workspace = true
n9-control-chat.workspace = true
pulldown-cmark = "0.13.0"
ratatui = "0.29.0"
ui9.workspace = true
ui9-app.workspace = true
ui9-dui.workspace = true
ui9-maker.workspace = true
ui9-mesh.workspace = true
ui9-net.workspace = true
ui9-tui.workspace = true
