[package]
name = "n9-chat-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
n9-core.workspace = true
serde.workspace = true
teloxide-core = "0.10.1"
