[package]
name = "n9-config-toml"
description = "Integration with the standard OS environment: files, sockets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
dirs = "6.0.0"
log.workspace = true
n9-core.workspace = true
notify = "8.0.0"
tokio.workspace = true
toml.workspace = true
ui9-dui.workspace = true
