[package]
name = "n9-control-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
n9-core.workspace = true
serde.workspace = true
ui9.workspace = true
ui9-dui.workspace = true
