[package]
name = "n9-exchange-dydx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
dydx = "0.1.1"
n9-core.workspace = true
schemars.workspace = true
serde.workspace = true
