[package]
name = "n9-exchange-dydx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
dydx = { git = "https://github.com/dydxprotocol/v4-clients", subdir = "v4-client-rs" }
n9-core.workspace = true
schemars.workspace = true
serde.workspace = true
toml.workspace = true
ui9-dui.workspace = true
n9-exchange.path = "../exchange-nominal"
