[package]
name = "n9-exchange"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
crb.workspace = true
schemars.workspace = true
serde.workspace = true
n9-core.workspace = true
n9-kit.workspace = true
anyhow.workspace = true
async-trait.workspace = true
