[package]
name = "n9-model-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anthropic-sdk = "0.1.5"
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
dotenvy.workspace = true
n9-core.workspace = true
serde.workspace = true
serde_json = "1.0" 
tokio = { workspace = true, features = ["full"] }
