[package]
name = "n9-model-openai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-openai = "0.27.2"
async-trait.workspace = true
crb.workspace = true
n9-core.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
ui9.workspace = true
ui9-dui.workspace = true
