[package]
name = "n9-core"
description = "Nine Core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
envy.workspace = true
futures.workspace = true
log.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
typed-slab = "0.2.1"
typedmap = "0.6.0"
ui9.workspace = true
ui9-dui.workspace = true
ui9-tracers.workspace = true
