[package]
name = "ui9-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
log.workspace = true
thiserror.workspace = true
ui9.workspace = true
ui9-dui.workspace = true
ui9-net.workspace = true
