[package]
name = "ui9-codec"
description = "Ice9 Codecs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
flexbuffers = { workspace = true, optional = true }
serde.workspace = true
serde-xml-rs = { version = "0.6.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
serde_toml = { package = "toml", version = "0.8.20", optional = true }

[features]
default = []
flex = ["flexbuffers"]
toml = ["serde_toml"]
json = ["serde_json"]
xml = ["serde-xml-rs"]
full = ["flex", "toml", "json", "xml"]
