[package]
name = "ui9-dui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
crb.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
tokio-stream.workspace = true # TODO: Consider moving this out
ui9.workspace = true
ui9-codec.workspace = true
ulid = { version = "1.2.0", features = ["serde"] }
