[package]
name = "ui9-maker"
description = "Ice9 Maker App Core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["std"] }
log.workspace = true
ui9-dui.workspace = true
ui9-net.workspace = true
