[package]
name = "ui9-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
log.workspace = true
pulldown-cmark = "0.10.0"
regex.workspace = true
slugify-rs = "0.0.3"
thiserror.workspace = true
yew.workspace = true
