[package]
name = "ui9-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ui9-dui.workspace = true
ui9-net.workspace = true

[features]
default = ["std"]
std = [
    "ui9-dui/std",
    "ui9-net/std",
]
web = [
    "ui9-dui/web",
    "ui9-net/web",
]
