[package]
name = "ui9-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
crb = { workspace = true, features = ["std"] }
derive_more.workspace = true
flexbuffers.workspace = true
futures.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
libp2p-request-response = { version = "0.28.0", features = ["cbor"] }
log.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
ui9.workspace = true
ui9-dui.workspace = true
