[package]
name = "ui9-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
crb.workspace = true
derive_more.workspace = true
flexbuffers.workspace = true
futures.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
libp2p-request-response = { version = "0.28.0", features = ["cbor"] }
log.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
ui9.workspace = true
ui9-dui.workspace = true

[features]
default = ["std"]
std = [
    "mdns",
    "tcp",
    "crb/std",
    "ui9-dui/std",
]
web = [
    "crb/web",
    "ui9-dui/web",
    "libp2p/wasm-bindgen",
    "libp2p/websocket-websys",
]
mdns = [
    "libp2p/mdns",
]
tcp = [
    "libp2p/tcp",
    "libp2p/tokio",
    "libp2p/quic",
    "libp2p/websocket",
    "libp2p/dns",
]
