[package]
name = "ui9-tracers"
description = "uiio components for ice9"
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
ui9.workspace = true
ui9-dui.workspace = true

[dev-dependencies]
anyhow.workspace = true

[features]
default = ["std"]
std = ["ui9-dui/std"]
web = ["ui9-dui/web"]
