[package]
name = "n9-web-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { version = "0.0.30" , default-features = false, features = ["web"] }
log.workspace = true
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
