[package]
name = "n9-web-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
crb = { workspace = true, features = ["web"] }
log.workspace = true
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
ui9.workspace = true
ui9-codec.workspace = true
# ui9-dui.workspace = true
